# ng_2512

./: .env.test  .firebaserc  .gitignore  APPTHEME.md  README.md  api.md  database.md  database_er.md  docker-compose.ci.yml  docker-compose.test.yml  docker-compose.yml  firebase.json  firestore.rules  mise.toml  ng_2512.sqlite3  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  mobile-web-e2e.yml
AI_server/: .dockerignore  .env.example  Dockerfile  __init__.py  main.py  requirements.txt
backend/: .dockerignore  Dockerfile  README.md  __init__.py  app.py  config.py  container.py  database.py  requirements.txt  security.py
backend/app/: ai_client.py  ai_service.py  config.py  db.py  main.py  storage.py
backend/db/: README.md  __init__.py  models.py  schema.sql
backend/repositories/: __init__.py  asset_repo.py  embedding_repo.py
deploy/: .env.deploy.example  .env.mobile-e2e.example  .env.production.example  docker-compose.mobile-e2e.yml  docker-compose.yml
development_flow/: CI_CICD.md  FB_Firebase.md  FL_FlaskAI.md  QA_Testing.md  README.md  RN_ReactNative.md  SEC_Security.md  TASK_INDEX.md  WBS.md  adm.dot  status.json
docs/: README.md  app-data-flow.md  mobile-ci-testing.md  user_capabilities.md
frontend/: package-lock.json  package.json
functions/: README.md  package.json  tsconfig.json
mobile/: .env.example  .eslintrc.js  App.tsx  Dockerfile  README.md  app.config.ts  app.json  babel.config.js  jest.setup.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
presentation/: README.md
tools/: taskflow.py
(+182 files in other folders)
